testsuite/tests/properties/invalid_new/common.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- BarNode("example")
}

struct MyStruct {
    a: Int
    b: Int
}

class FooNode implements Node[FooNode] {
    @abstract fun prop(): MyStruct
    @exported fun public_prop(): Int = {
        val s = node.prop;
        s.a + s.b
    }
}
